--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -18,29 +18,30 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+			"aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
               "src/custom-theme.scss",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-			  "./node_modules/@syncfusion/ej2-base/styles/material.css",
-			  "./node_modules/@syncfusion/ej2-buttons/styles/material.css",
-			  "./node_modules/@syncfusion/ej2-calendars/styles/material.css",
-		      "./node_modules/@syncfusion/ej2-dropdowns/styles/material.css",
-			  "./node_modules/@syncfusion/ej2-inputs/styles/material.css",
-			  "./node_modules/@syncfusion/ej2-lists/styles/material.css",
-			  "./node_modules/@syncfusion/ej2-popups/styles/material.css",
-			  "./node_modules/@syncfusion/ej2-navigations/styles/material.css",
-			  "./node_modules/@syncfusion/ej2-angular-schedule/styles/material.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+			  "node_modules/@syncfusion/ej2-base/styles/material.css",
+			  "node_modules/@syncfusion/ej2-buttons/styles/material.css",
+			  "node_modules/@syncfusion/ej2-calendars/styles/material.css",
+		      "node_modules/@syncfusion/ej2-dropdowns/styles/material.css",
+			  "node_modules/@syncfusion/ej2-inputs/styles/material.css",
+			  "node_modules/@syncfusion/ej2-lists/styles/material.css",
+			  "node_modules/@syncfusion/ej2-popups/styles/material.css",
+			  "node_modules/@syncfusion/ej2-navigations/styles/material.css",
+			  "node_modules/@syncfusion/ej2-angular-schedule/styles/material.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
 			  "node_modules/bootstrap-select/dist/css/bootstrap-select.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "node_modules/intl-tel-input/build/css/intlTelInput.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "src/assets/css/style.css",
               "src/assets/css/daterangepicker.css",
               "src/assets/css/resp-style.css",
