--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,79 +12,77 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "^13.2.4",
-    "@angular/cdk": "^13.2.4",
-    "@angular/common": "~13.2.4",
-    "@angular/compiler": "~13.2.4",
-    "@angular/core": "~13.2.4",
-    "@angular/forms": "~13.2.4",
-    "@angular/localize": "~13.2.4",
-    "@angular/material": "^13.2.4",
-    "@angular/platform-browser": "~13.2.4",
-    "@angular/platform-browser-dynamic": "~13.2.4",
-    "@angular/router": "~13.2.4",
-    "@kolkov/angular-editor": "^2.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@ng-select/ng-select": "^8.1.1",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
-    "@syncfusion/ej2-angular-schedule": "^19.4.52",
-    "amazing-time-picker": "^1.8.0",
-    "bootstrap": "^4.5.2",
+    "@angular/animations": "^16.2.1",
+    "@angular/cdk": "^16.2.1",
+    "@angular/common": "~16.2.1",
+    "@angular/compiler": "~16.2.1",
+    "@angular/core": "~16.2.1",
+    "@angular/forms": "~16.2.1",
+    "@angular/localize": "~16.2.1",
+    "@angular/material": "^16.2.1",
+    "@angular/platform-browser": "~16.2.1",
+    "@angular/platform-browser-dynamic": "~16.2.1",
+    "@angular/router": "~16.2.1",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@ng-select/ng-select": "^11.1.1",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "@popperjs/core": "^2.11.6",
+    "@syncfusion/ej2-angular-schedule": "^22.2.8",
+    "@types/jasmine": "^4.3.5",
+    "@types/node": "^20.5.0",
+    "bootstrap": "^5.3.1",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
-    "chart.js": "^2.9.3",
+    "chart.js": "^4.3.3",
+    "codelyzer": "^6.0.2",
     "core-js": "^3.21.1",
     "google-libphonenumber": "^3.2.27",
-    "intl-tel-input": "^17.0.15",
+    "intl-tel-input": "^18.2.1",
+    "jasmine-core": "^5.1.0",
     "jquery": "^3.6.0",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "libphonenumber-js": "^1.9.49",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.29.3",
-    "ng2-charts": "^2.4.3",
+    "ng2-charts": "^5.0.3",
     "ng2-daterangepicker": "^3.0.1",
     "ng2-tel-input": "^2.3.0",
     "ngx-avatar": "^4.1.0",
-    "ngx-bootstrap": "^8.0.0",
-    "ngx-doc-viewer": "^2.1.2",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-doc-viewer": "^15.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
-    "ngx-image-cropper": "^6.1.0",
+    "ngx-image-cropper": "^7.0.2",
     "ngx-intl-tel-input": "^3.1.3",
-    "ngx-material-timepicker": "^5.5.3",
-    "ngx-owl-carousel-o": "^7.0.1",
+    "ngx-material-timepicker": "^13.1.1",
+    "ngx-owl-carousel-o": "^16.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-select-ex": "^8.0.1",
-    "ngx-toastr": "^14.2.1",
-    "ngx-ui-loader": "^11.0.0",
+    "ngx-toastr": "^17.0.2",
+    "ngx-ui-loader": "^13.0.0",
     "popper.js": "^1.16.1",
-    "query-string": "^7.1.1",
+    "protractor": "^7.0.0",
+    "query-string": "^8.1.0",
     "rxjs": "^7.5.4",
     "rxjs-compat": "^6.6.7",
     "secure-ls": "^1.2.6",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "typescript": "^5.1.6",
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.5",
-    "@angular/cli": "~13.2.5",
-    "@angular/compiler-cli": "~13.2.4",
-    "@types/jasmine": "^3.10.3",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "~16.2.1",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^17.0.21",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "^4.0.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
     "ts-node": "^10.5.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "tslint": "^6.1.3"
   }
 }
-
-
