--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,6 +23,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
+			"stylePreprocessorOptions": {
+				"includePaths": ["node_modules"]
+			},
             "styles": [
               "src/custom-theme.scss",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
