--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,11 +32,11 @@
     "@syncfusion/ej2-angular-schedule": "^22.2.8",
     "@types/jasmine": "^4.3.5",
     "@types/node": "^20.5.0",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^4.6.2",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
     "chart.js": "^4.3.3",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "core-js": "^3.21.1",
     "google-libphonenumber": "^3.2.27",
     "intl-tel-input": "^18.2.1",
@@ -52,7 +52,7 @@
     "ng2-charts": "^5.0.3",
     "ng2-daterangepicker": "^3.0.1",
     "ng2-tel-input": "^2.3.0",
-    "ngx-avatar": "^4.1.0",
+    "ngx-avatars": "^1.6.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-doc-viewer": "^15.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
@@ -60,10 +60,11 @@
     "ngx-intl-tel-input": "^3.1.3",
     "ngx-material-timepicker": "^13.1.1",
     "ngx-owl-carousel-o": "^16.0.0",
-    "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-select-ex": "^8.0.1",
+    "ngx-slider-v2": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "ngx-ui-loader": "^13.0.0",
+    "node-sass": "^9.0.0",
     "popper.js": "^1.16.1",
     "protractor": "^7.0.0",
     "query-string": "^8.1.0",
