--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-magic/ngx-gp-autocomplete": "^1.0.4",
     "@angular/animations": "^16.2.1",
     "@angular/cdk": "^16.2.1",
     "@angular/common": "~16.2.1",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "~16.2.1",
     "@angular/platform-browser-dynamic": "~16.2.1",
     "@angular/router": "~16.2.1",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@ng-select/ng-select": "^11.1.1",
@@ -29,8 +31,10 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "@syncfusion/ej2-angular-schedule": "^22.2.8",
+    "@types/google.maps": "^3.53.6",
     "@types/jasmine": "^4.3.5",
     "@types/node": "^20.5.0",
+    "angular-editor": "^0.0.3",
     "bootstrap": "^4.6.2",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
