--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -49,6 +49,7 @@
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "node_modules/intl-tel-input/build/css/intlTelInput.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+			  "node_modules/angular-calendar/css/angular-calendar.css",
                "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "src/assets/css/style.css",
               "src/assets/css/daterangepicker.css",
