--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,12 +34,14 @@
     "@types/google.maps": "^3.53.6",
     "@types/jasmine": "^4.3.5",
     "@types/node": "^20.5.0",
+    "angular-calendar": "^0.31.0",
     "bootstrap": "^4.6.2",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
     "chart.js": "^4.3.3",
     "codelyzer": "^0.0.28",
     "core-js": "^3.21.1",
+    "date-fns": "^2.30.0",
     "google-libphonenumber": "^3.2.27",
     "intl-tel-input": "^18.2.1",
     "jasmine-core": "^5.1.0",
@@ -50,6 +52,7 @@
     "libphonenumber-js": "^1.9.49",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
+    "luxon": "^3.4.1",
     "moment": "^2.29.3",
     "ng2-charts": "^5.0.3",
     "ng2-daterangepicker": "^3.0.1",
