--- a/middleware/.env
+++ b/middleware/.env
@@ -1,15 +1,15 @@
 SERVICE_API_URLs = http://65.0.146.153:1337
-SERVICE_API_URL = http://localhost:1337
+SERVICE API URL = http://localhost:1337
 STAGE_SERVICE_API_URL = http://65.0.146.153:1338
-PRODUCTION_SERVICE_API_URL =http://localhost:1339
+PRODUCTION SERVICE API URL = http://149.56.180.252:1339
 REDIS_CLIENT_URL = redis://localhost:6379
 PORT = 5000
-STAGE_PORT = 5001
-PRODUCTION_PORT = 5003
+STAGE PORT = 5001
+PRODUCTION PORT = 5003
 NODE_ENV = production
-CLIENT_ID = TO8ZDYTJU3
-STAGE_CLIENT_ID = TO8ZDYTJU3
-PRODUCTION_CLIENT_ID = TO8ZDYTJU3
+CLIENT ID = T08ZDYTJU3
+STAGE CLIENT ID = TO8ZDYTJU3
+PRODUCTION CLIENT ID = T08ZDYTJU3
 CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
 STAGE_CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
 PRODUCTION_CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
